ChangeLog
=========

Oct 9, 2024 : v0.29 released!
  - fixed alpha rendering
  - fixed shield rendering

Oct 8, 2024 : v0.28 released!
  - after a long hiatus development has continued
  - compass and clock render properly
  - fixed stairs recipe
  - lots of bug fixes and performance improvements
  - upgraded to glfw/3.4

May 1, 2020 v0.27 released!
  - many bugs fixed
  - terrain/biome generation improved

Mar 20, 2020 : v0.26 released!
  - re-release for recent fixes in javaforce

Jan 8, 2020 : v0.25 released!
  - fix : horse textures were changed in texture pack 1.13
    - replaced old 1.8 textures for now
    - will need to redo texture coords for horse in blender later

Jan 7, 2020 : v0.24 released!
  - new : just some performance improvements

Aug 25, 2018 : v0.23 released!
  - new : add Shield (does not do anything yet)
  - new : update to texture pack 1.13 (from 1.8)

Jul 4, 2017 : v0.22 released!
  - fix : self appears while riding on horse
  - fix : set default fov to 70 degs

Aug 27, 2015 : v0.21 released!
  - added particles (uses : break block, tame horse)
  - added new camera views (F5 to toggle)
  - added jfcraft.move.MoveBase
    - new base class for moving entities
    - will become better AI logic for entities
  - bug fixes

Aug 18, 2015 : v0.20 released!
  - attempted to use SWT (GLCanvas) but their keyboard support is not designed for gaming
    - it doesn't generate key release events if multiple keys are pressed
      - a known bug since v1.0 and still present in v4.5
  - started using LWJGL/3.0 (which uses GLFW)
    - GLFW has a mouse locking feature which is better than using java.awt.Robot
    - GLFW can not set the window icon (feature is implemented in git, not released yet)
    - LWJGL uses libffi which in my experience is PAINfully slow
  - finally switched to GLFW (now part of JavaForce)
    - GLFW doesn't support icons yet but I added some JNI to overcome that (Windows only)
  - added block hardness