@@ -9,7 +9,7 @@
   <property name="msi" value="jfcraft"/>
   <property name="src" location="src/base"/>
   <property name="build" location="classes"/>
-  <property name="version" value="0.29"/>
+  <property name="version" value="0.30"/>
 
   <import file="${home}/base.xml"/>
 
